--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.1",
-    "spryker/company-user": "2.2.0"
+    "spryker/company-user": "^2.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "^0.12",
